[package]
name = "uk-tax"
version = "0.1.0"
edition = "2024"
authors = ["Laurence Stock-Tully"]
description = "A Rust library that calculates UK PAYE Income Tax and Class 1 National Insurance contributions with historical tax year support."
readme = "README.md"
license = "MIT"
repository = "https://github.com/lst1000/uk-tax"
homepage = "https://github.com/lst1000/uk-tax"
documentation = "https://docs.rs/uk-tax"
keywords = ["tax", "UK", "PAYE", "national-insurance", "finance"]
categories = ["finance"]

[dependencies]
